Added identity manager service
